// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders list control 1`] = `
<div
  className="inputControlVis"
>
  <div
    data-test-subj="inputControl0"
  >
    <ListControl
      control={
        Object {
          "filterManager": Object {
            "createFilter": [Function],
          },
          "id": "mock-list-control",
          "label": "list control",
          "options": Object {
            "multiselect": true,
            "type": "terms",
          },
          "selectOptions": Array [
            Object {
              "label": "choice1",
              "value": "choice1",
            },
            Object {
              "label": "choice2",
              "value": "choice2",
            },
          ],
          "type": "list",
          "value": "",
        }
      }
      controlIndex={0}
      stageFilter={[Function]}
    />
  </div>
  <KuiFieldGroup
    isAlignedTop={false}
  >
    <KuiFieldGroupSection
      isWide={false}
    >
      <KuiButton
        buttonType="primary"
        data-test-subj="inputControlSubmitBtn"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Update filters
      </KuiButton>
    </KuiFieldGroupSection>
    <KuiFieldGroupSection
      isWide={false}
    >
      <KuiButton
        buttonType="basic"
        data-test-subj="inputControlCancelBtn"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Cancel
      </KuiButton>
    </KuiFieldGroupSection>
    <KuiFieldGroupSection
      isWide={false}
    >
      <KuiButton
        buttonType="basic"
        data-test-subj="inputControlClearBtn"
        onClick={[Function]}
        type="button"
      >
        Clear
      </KuiButton>
    </KuiFieldGroupSection>
  </KuiFieldGroup>
</div>
`;

exports[`Renders range control 1`] = `
<div
  className="inputControlVis"
>
  <div
    data-test-subj="inputControl0"
  >
    <RangeControl
      control={
        Object {
          "filterManager": Object {
            "createFilter": [Function],
          },
          "id": "mock-range-control",
          "label": "ragne control",
          "max": 100,
          "min": 0,
          "options": Object {
            "decimalPlaces": 0,
            "step": 1,
          },
          "type": "range",
          "value": Object {
            "max": 0,
            "min": 0,
          },
        }
      }
      controlIndex={0}
      stageFilter={[Function]}
    />
  </div>
  <KuiFieldGroup
    isAlignedTop={false}
  >
    <KuiFieldGroupSection
      isWide={false}
    >
      <KuiButton
        buttonType="primary"
        data-test-subj="inputControlSubmitBtn"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Update filters
      </KuiButton>
    </KuiFieldGroupSection>
    <KuiFieldGroupSection
      isWide={false}
    >
      <KuiButton
        buttonType="basic"
        data-test-subj="inputControlCancelBtn"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Cancel
      </KuiButton>
    </KuiFieldGroupSection>
    <KuiFieldGroupSection
      isWide={false}
    >
      <KuiButton
        buttonType="basic"
        data-test-subj="inputControlClearBtn"
        onClick={[Function]}
        type="button"
      >
        Clear
      </KuiButton>
    </KuiFieldGroupSection>
  </KuiFieldGroup>
</div>
`;

exports[`Submit and Reset btns disabled when nothing is staged 1`] = `
<div
  className="inputControlVis"
>
  <KuiFieldGroup
    isAlignedTop={false}
  >
    <KuiFieldGroupSection
      isWide={false}
    >
      <KuiButton
        buttonType="primary"
        data-test-subj="inputControlSubmitBtn"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Update filters
      </KuiButton>
    </KuiFieldGroupSection>
    <KuiFieldGroupSection
      isWide={false}
    >
      <KuiButton
        buttonType="basic"
        data-test-subj="inputControlCancelBtn"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Cancel
      </KuiButton>
    </KuiFieldGroupSection>
    <KuiFieldGroupSection
      isWide={false}
    >
      <KuiButton
        buttonType="basic"
        data-test-subj="inputControlClearBtn"
        onClick={[Function]}
        type="button"
      >
        Clear
      </KuiButton>
    </KuiFieldGroupSection>
  </KuiFieldGroup>
</div>
`;

exports[`Submit and Reset btns enabled when filter is staged 1`] = `
<div
  className="inputControlVis"
>
  <KuiFieldGroup
    isAlignedTop={false}
  >
    <KuiFieldGroupSection
      isWide={false}
    >
      <KuiButton
        buttonType="primary"
        data-test-subj="inputControlSubmitBtn"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Update filters
      </KuiButton>
    </KuiFieldGroupSection>
    <KuiFieldGroupSection
      isWide={false}
    >
      <KuiButton
        buttonType="basic"
        data-test-subj="inputControlCancelBtn"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Cancel
      </KuiButton>
    </KuiFieldGroupSection>
    <KuiFieldGroupSection
      isWide={false}
    >
      <KuiButton
        buttonType="basic"
        data-test-subj="inputControlClearBtn"
        onClick={[Function]}
        type="button"
      >
        Clear
      </KuiButton>
    </KuiFieldGroupSection>
  </KuiFieldGroup>
</div>
`;
